; ModuleID = '/home/carl/AnghaBench/bitwise/ion/extr_parse.c_parse_note.c'
source_filename = "/home/carl/AnghaBench/bitwise/ion/extr_parse.c_parse_note.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@token = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@TOKEN_LPAREN = common dso_local global i32 0, align 4
@TOKEN_COMMA = common dso_local global i32 0, align 4
@TOKEN_RPAREN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @parse_note() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @token, i32 0, i32 0), align 4
  store i32 %4, i32* %1, align 4
  %5 = call i8* (...) @parse_name()
  store i8* %5, i8** %2, align 8
  store i32* null, i32** %3, align 8
  %6 = load i32, i32* @TOKEN_LPAREN, align 4
  %7 = call i64 @match_token(i32 %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %24

9:                                                ; preds = %0
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 (...) @parse_note_arg()
  %12 = call i32 @buf_push(i32* %10, i32 %11)
  br label %13

13:                                               ; preds = %17, %9
  %14 = load i32, i32* @TOKEN_COMMA, align 4
  %15 = call i64 @match_token(i32 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %13
  %18 = load i32*, i32** %3, align 8
  %19 = call i32 (...) @parse_note_arg()
  %20 = call i32 @buf_push(i32* %18, i32 %19)
  br label %13

21:                                               ; preds = %13
  %22 = load i32, i32* @TOKEN_RPAREN, align 4
  %23 = call i32 @expect_token(i32 %22)
  br label %24

24:                                               ; preds = %21, %0
  %25 = load i32, i32* %1, align 4
  %26 = load i8*, i8** %2, align 8
  %27 = load i32*, i32** %3, align 8
  %28 = load i32*, i32** %3, align 8
  %29 = call i32 @buf_len(i32* %28)
  %30 = call i32 @new_note(i32 %25, i8* %26, i32* %27, i32 %29)
  ret i32 %30
}

declare dso_local i8* @parse_name(...) #1

declare dso_local i64 @match_token(i32) #1

declare dso_local i32 @buf_push(i32*, i32) #1

declare dso_local i32 @parse_note_arg(...) #1

declare dso_local i32 @expect_token(i32) #1

declare dso_local i32 @new_note(i32, i8*, i32*, i32) #1

declare dso_local i32 @buf_len(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
